--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "export NODE_ENV=development && nodemon app.js",
     "start": "export NODE_ENV=production && node app.js ",
-    "test": "mocha"
+    "test": "mocha --recursive"
   },
   "author": "Fajar Dwi Darmanto",
   "license": "ISC",
