--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "export NODE_ENV=development && nodemon app.js",
+    "client-dev": "webpack-dev-server --config ./admin-client/webpack.dev.js",
     "start": "export NODE_ENV=production && node app.js ",
     "test": "mocha --recursive"
   },
@@ -20,14 +21,39 @@
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "reading-time": "^1.2.0",
-    "sequelize": "^6.2.4",
+    "sequelize": "^6.3.0",
     "slugify": "^1.4.4",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "build-url": "^2.0.0",
+    "bulma": "^0.9.0",
+    "css-loader": "^3.6.0",
     "expect.js": "^0.3.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "mocha": "^8.0.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
-    "supertest": "^4.0.2"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
+    "supertest": "^4.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.8"
   }
 }
