--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cls-hooked": "^4.2.2",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
     "dotenv": "^8.2.0",
