--- a/example.env
+++ b/example.env
@@ -1,4 +1,33 @@
-DATABASE_VENDOR=
-DATABASE_HOST=
+DB_USERNAME_DEV=
+DB_PASSWORD_DEV=
+DB_DATABASE_DEV=
+DB_HOST_DEV=
+DB_DIALECT_DEV=
+EMAIL_HOST_DEV=
+EMAIL_PORT_DEV=
+EMAIL_USERNAME_DEV=
+EMAIL_PASSWORD_DEV=
+EMAIL_SENDER_DEV=
+URL_BASE_DEV=
+JWT_SECRET_DEV=
 
+DB_USERNAME_TEST=
+DB_PASSWORD_TEST=
+DB_DATABASE_TEST=
+DB_HOST_TEST=
+DB_DIALECT_TEST=
+JWT_SECRET_TEST=
+
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=
+DB_DIALECT=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+EMAIL_SENDER=
 JWT_SECRET=
+URL_BASE=
+
