--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cls-hooked": "^4.2.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.4.1",
+    "nodemailer": "^6.4.10",
     "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
     "reading-time": "^1.2.0",
     "sequelize": "^6.3.0",
     "slugify": "^1.4.4",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
