--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "NodeJS headless blog CMS",
   "main": "index.js",
   "scripts": {
-    "dev": "export NODE_ENV=development && nodemon app.js",
+    "dev": "export NODE_ENV=development && nodemon index.js",
     "dev:client": "webpack-dev-server --config ./admin-client/webpack.dev.js",
     "build:client": "webpack --config ./admin-client/webpack.prod.js",
     "build": "npm run build:client",
-    "start": "export NODE_ENV=production && node app.js ",
-    "test": "mocha --recursive",
-    "migrate": "sequelize db:migrate"
+    "start": "export NODE_ENV=production && node index.js ",
+    "migrate": "sequelize db:migrate",
+    "test:internal:unit": "mocha --recursive ./test/internal/integration",
+    "test:internal:integration": "mocha --recursive ./test/internal/integration",
+    "test:app:unit": "mocha --recursive ./test/app/integration",
+    "test:app:integration": "mocha --recursive ./test/app/integration"
   },
   "author": "Fajar Dwi Darmanto",
   "license": "ISC",
@@ -35,7 +38,8 @@
     "sequelize": "^6.3.0",
     "slugify": "^1.4.4",
     "sqlite3": "^5.0.0",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
