--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "headless-blog",
+  "name": "simple-node-blog-cms",
   "version": "1.0.0",
   "description": "NodeJS headless blog CMS",
   "main": "index.js",
@@ -34,6 +34,7 @@
     "pg-hstore": "^2.3.3",
     "reading-time": "^1.2.0",
     "sequelize": "^6.3.0",
+    "showdown": "^1.9.1",
     "slugify": "^1.4.4",
     "sqlite3": "^5.0.0",
     "uuid": "^8.2.0",
